--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".ResultFragment">
+    android:background="@color/bg_color"
+    tools:context=".ui.fragment.ResultFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
