--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/scanFragment"
-        android:name="com.captvelsky.descam.ScanFragment"
+        android:name="com.captvelsky.descam.ui.fragment.ScanFragment"
         android:label="fragment_scan"
         tools:layout="@layout/fragment_scan" />
     <fragment
         android:id="@+id/resultFragment"
-        android:name="com.captvelsky.descam.ResultFragment"
+        android:name="com.captvelsky.descam.ui.fragment.ResultFragment"
         android:label="fragment_result"
         tools:layout="@layout/fragment_result" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.captvelsky.descam.SettingsFragment"
+        android:name="com.captvelsky.descam.ui.fragment.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
