--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="red">#D4483A</color>
     <color name="orange">#D4953A</color>
-    <color name="text_color">#FF000000</color>
-    <color name="bg_color">#FFFFFFFF</color>
+    <color name="text_color">#FFFFFFFF</color>
+    <color name="bg_color">#2D313D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FFFFC4BE</color>
-    <color name="navbar">#F9F9F9</color>
+    <color name="navbar">#2A2E39</color>
 </resources>
