--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,8 +4,14 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/red</item>
         <item name="colorOnPrimary">@color/orange</item>
+        <item name="colorAccent">@color/red</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="TextDescription">
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textSize">18sp</item>
     </style>
 </resources>
