--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="red">#D4483A</color>
     <color name="orange">#D4953A</color>
     <color name="text_color">#FF000000</color>
+    <color name="text_bg">#D9D9D9</color>
     <color name="bg_color">#FFFFFFFF</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FFFFC4BE</color>
