--- a/app/src/main/res/layout/item_scan_result.xml
+++ b/app/src/main/res/layout/item_scan_result.xml
@@ -56,7 +56,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/emailTextView" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/statusTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingVertical="8dp"
@@ -68,7 +68,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/checkedTextTextView" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/statusValueTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="16dp"
@@ -76,7 +76,7 @@
                     android:text="@string/status_value"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    app:layout_constraintStart_toEndOf="@+id/statusTextView"
                     app:layout_constraintTop_toBottomOf="@+id/checkedTextTextView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
