fix layout visibility(2)

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -54,7 +54,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/extract_text"
             android:textColor="@color/white"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="@+id/guideline1"
@@ -65,7 +65,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:cardBackgroundColor="@color/text_bg"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
